bdr.BDR.scala.error
Erreur de compilation :
BDR:5: error: ';' expected but 'if' found.
 }  if (litMessage()) == "L"{
    ^